// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <Header /> error messages should render custom error 1`] = `
<Header__Wrapper
  className=""
  invalid={true}
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <div
    className="header__errors"
  >
    <Header__ErrorItem>
      custom error message
    </Header__ErrorItem>
  </div>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> error messages should render email error 1`] = `
<Header__Wrapper
  className=""
  invalid={true}
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <div
    className="header__errors"
  >
    <Header__ErrorItem>
      Het moet een geldig e-mailadres zijn
    </Header__ErrorItem>
  </div>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> error messages should render maxLength error 1`] = `
<Header__Wrapper
  className=""
  invalid={true}
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <div
    className="header__errors"
  >
    <Header__ErrorItem>
      U kunt maximaal $
      666
       tekens invoeren.
    </Header__ErrorItem>
  </div>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> error messages should render no error when element is only touched 1`] = `
<Header__Wrapper
  className=""
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> error messages should render optional field message 1`] = `
<Header__Wrapper
  className=""
  invalid={false}
>
  <Header__Label>
    naam
    <Header__Optional>
      (optioneel)
    </Header__Optional>
  </Header__Label>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> error messages should render required error 1`] = `
<Header__Wrapper
  className=""
  invalid={true}
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <div
    className="header__errors"
  >
    <Header__ErrorItem>
      Dit is een verplicht veld
    </Header__ErrorItem>
  </div>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> should render correctly 1`] = `
<Header__Wrapper
  className=""
  invalid={false}
>
  <Header__Label>
    naam
    <Component />
  </Header__Label>
  <Header__Children />
</Header__Wrapper>
`;

exports[`Form component <Header /> should render when label is not available 1`] = `
<Header__Wrapper
  className=""
  invalid={false}
>
  <Header__Children />
</Header__Wrapper>
`;
